<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_activity_button_search">Поиск</string>
    <string name="main_activity_button_library">Медиатека</string>
    <string name="main_activity_button_settings">Настройки</string>
    <string name="settings_activity_share_txt">Поделиться приложением</string>
    <string name="settings_activity_support_txt">Написать в поддержку</string>
    <string name="settings_activity_agreement_txt">Пользовательское соглашение</string>
    <string name="settings_activity_theme_switch">Темная тема</string>
    <string name="support_connect_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_connect_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="practicum_android_developer_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="developer_mail_address">zhebera@yandex.by</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="failed_connection">Проблемы со связью\n\n Загрузка не удалась. Проверьте\n подключение к интернету
    </string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="player_zero_timing">00:00</string>
    <string name="empty_mediateka">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="selected_tracks">Избранные треки</string>
    <string name="starting_time">00:30</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_overview">Описание</string>
    <string name="create">Создать</string>
    <string name="no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="dialog_question">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_negative_answer">Отмена</string>
    <string name="dialog_positive_answer">Да</string>
</resources>