<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_button_settings"
                android:textColor="@color/text_color"
                android:textSize="@dimen/primary_text_size"
                android:textStyle="bold"

                android:drawableStart="@drawable/arrow_back"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:drawablePadding="28dp"
        />

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_activity_theme_switch"
                        android:layout_marginVertical="@dimen/settings_activity_txt_frame_padding"
                        android:layout_marginStart="@dimen/medium_padding"
                        android:textSize="@dimen/secondary_text_size"

                />
        </FrameLayout>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_activity_share_txt"
                        android:textColor="@color/black"
                        android:layout_marginVertical="@dimen/settings_activity_txt_frame_padding"
                        android:layout_marginStart="@dimen/medium_padding"
                        android:layout_marginEnd="44dp"
                        android:layout_gravity="start"
                />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/share"
                        android:layout_marginEnd="@dimen/settings_activity_txt_frame_padding"
                        android:layout_gravity="end"
                        android:layout_marginVertical="22dp"
                />

        </FrameLayout>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_activity_support_txt"
                        android:textColor="@color/black"
                        android:layout_marginVertical="@dimen/settings_activity_txt_frame_padding"
                        android:layout_marginStart="@dimen/medium_padding"
                        android:layout_marginEnd="40dp"
                        android:layout_gravity="start"
                />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/support"
                        android:layout_marginEnd="21dp"
                        android:layout_gravity="end"
                        android:layout_marginVertical="22dp"
                />
        </FrameLayout>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_activity_agreement_txt"
                        android:textColor="@color/black"
                        android:layout_marginVertical="@dimen/settings_activity_txt_frame_padding"
                        android:layout_marginStart="@dimen/medium_padding"
                        android:layout_marginEnd="40dp"
                        android:layout_gravity="start"
                />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_forward"
                        android:layout_marginEnd="23dp"
                        android:layout_gravity="end"
                        android:layout_marginVertical="24dp"
                />
        </FrameLayout>



</LinearLayout>