<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".library.ui.view.playlist_description.PlaylistDescriptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/ivPlaceholder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintDimensionRatio="1:1"
                android:scaleType="centerCrop"
                tools:src="@drawable/music_note"/>

        <ImageView
                android:id="@+id/ivBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/arrow_back"
                app:tint="@color/medium_black_white"
                android:layout_marginStart="20dp"/>


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

        <TextView
                android:id="@+id/tvPlaylistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                app:layout_constraintBottom_toTopOf="@id/tvPlaylistOverview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/medium_black_medium_black"
                android:fontFamily="@font/ys_display_medium"
                android:textStyle="bold"
                android:textFontWeight="700"
                android:textSize="24sp"
                android:maxLines ="1"
                tools:text="Best Songs 2021"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"/>

        <TextView
                android:id="@+id/tvPlaylistOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvPlaylistName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/llCountSongs"
                android:textColor="@color/medium_black_medium_black"
                android:fontFamily="@font/ys_display_regular"
                android:textFontWeight="400"
                android:textSize="18sp"
                android:maxLines ="1"
                tools:text="2022"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"/>

        <LinearLayout
                android:id="@+id/llCountSongs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPlaylistOverview"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tvMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/medium_black_medium_black"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:maxLines ="1"
                    tools:text="300 минут"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/ellipse"
                    android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/medium_black_medium_black"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    tools:text="98 треков"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/llButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llCountSongs">

            <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/share"
                    app:tint="@color/medium_black_medium_black"/>

            <ImageView
                    android:id="@+id/ivSettings"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/dots_settings"
                    app:tint="@color/medium_black_medium_black"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_tracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_background"
            android:paddingHorizontal="16dp"
            app:behavior_hideable="false"
            app:behavior_peekHeight="200dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
                android:id="@+id/lineTracks"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:background="@color/light_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTracks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lineTracks"
                android:layout_marginTop="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_background"
            android:paddingHorizontal="16dp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="300dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
                android:id="@+id/lineSettings"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:background="@color/light_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"/>

        <include
                layout="@layout/playlist"
                android:id="@+id/playlist_layout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lineSettings"/>

        <TextView
                android:id="@+id/tvShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_layout"
                android:text="@string/share"
                style="@style/SecondaryTextView.MediumBlackWhite"/>

        <TextView
                android:id="@+id/tvEditInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvShare"
                android:text="@string/edit_information"
                style="@style/SecondaryTextView.MediumBlackWhite"/>

        <TextView
                android:id="@+id/tvDeletePlaylist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEditInformation"
                android:text="@string/delete_playlist"
                style="@style/SecondaryTextView.MediumBlackWhite"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>